added load balancer for ext access

--- a/service.yaml
+++ b/service.yaml
@@ -4,14 +4,13 @@ metadata:
   name: jenkins-service
   namespace: devops-tools
   annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/path:   /
-      prometheus.io/port:   '8080'
+    prometheus.io/scrape: 'true'
+    prometheus.io/path:   /
+    prometheus.io/port:   '8080'
 spec:
   selector: 
     app: jenkins-server
-  type: NodePort  
+  type: LoadBalancer   # Change the service type to LoadBalancer
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 32000
